fix(message-looks): Added a nice UI to ensure errors/ messages are more visible

--- a/src/static/css/index.css
+++ b/src/static/css/index.css
@@ -52,11 +52,22 @@ button,
     padding: 5px 0 5px 0;
     border: none;
     background: #d9d9d9;
-    box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.11);
     border-radius: 8px;
+    box-shadow: inset 0 0 10px #000000;
 }
 
 .custom-form input:focus {
     background-color: #c1c1c1;
     outline: none;
+}
+
+.custom-error {
+    margin: 5px 0 5px 0;
+    padding: 5px 0 5px 0;
+    border-radius: 8px;
+    box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.11);
+}
+
+.close-message {
+    box-shadow: inset 0 0 10px black;
 }
